Use valid start date to calculate remaining scheduled payments

BUG: 419113
FIXED-IN: 5.0.9